<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="css.cis3334.contacts.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/blue"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="Contacts"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewContacts"
            android:layout_marginStart="11dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:text="@string/name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/number1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNumber"
            tools:text="@string/number1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">


            <Button
                android:text="Call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCall1"
                android:layout_weight="1" />

            <Spinner
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner1"
                android:layout_weight="1"
                android:entries="@array/messages"
                android:popupBackground="@color/colorAccent" />

            <Button
                android:text="Text Selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonText1"
                android:layout_weight="1" />

        </LinearLayout>

        <TextView
            android:text="@string/name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName2"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNumber2"
            tools:text="@string/number2" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">


            <Button
                android:text="Call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCall2"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:layout_weight="1"
                android:entries="@array/messages2"
                android:background="@color/colorAccent"
                android:popupBackground="@color/colorAccent" />

            <Button
                android:text="Text Selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonText2"
                android:layout_weight="1" />

        </LinearLayout>
        <TextView
            android:text="@string/name3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewName3"
            android:layout_below="@+id/linearLayout"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/number3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNumber3"
            tools:text="@string/number3" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">


            <Button
                android:text="Call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonCall3"
                android:layout_weight="1" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner3"
                android:layout_weight="1"
                android:entries="@array/messages3"
                android:background="@color/colorAccent"
                android:popupBackground="@color/colorAccent" />

            <Button
                android:text="Text Selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonText3"
                android:layout_weight="1" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewResult" />

    </LinearLayout>


</RelativeLayout>
